Make the logs page more legible. Unfortunately, the fixed table layout didn't work for now. Text overlapped, even on a full-screen browser. Add some whitespace into cells for better legibility. Please let this be temporary.

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -986,12 +986,16 @@ ul.meta li {
 }
 
 #log_data {  /* this will do for now */
-	table-layout: fixed;
+	/*table-layout: fixed;*/
 }
+
 	#log_data td {
 		white-space: nowrap;
+		/* someone who knows what they're doing, can you fix this? */
+		border-top: 1px solid grey;
+		padding: 1px 5px 1px 5px;
 	}
-	
+
 	#post_data .content td {
 		white-space: normal;
 	}
